--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,7 @@
   "description": "task creator app",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon index.js"
-
+    "start": "nodemon index.js"
   },
   "keywords": [
     "scrum",
@@ -16,12 +15,13 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "connect-multiparty": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "jwt-simple": "^0.5.6",
     "moment": "^2.29.1",
-    "mongoose": "^5.12.11"
+    "mongoose": "^5.12.10",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
